--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "connect-redis": "~1.4.6",
     "url": "~0.7.9",
     "path": "~0.4.9",
-    "swig": "~1.3.2"
+    "swig": "~1.3.2",
+    "serialport": "~1.3.1",
+    "firmata": "~0.3.2"
   }
 }
